2005-04-11  Michael Natterer  <mitch@gimp.org>

	Let the user decide whether tool options are persistant or not as
	suggested in bug #165078:

	* app/config/gimprc-blurbs.h
	* app/config/gimpguiconfig.[ch]: added "gboolean save_tool_options".

	* app/tools/gimp-tools.[ch]: implement the same logic as for
	devicerc and essionrc: added gimp_tools_clear() which deletes the
	stored tool options and added "save_tool_options" and
	"always_save" parameters to gimp_tools_save(). Everything affects
	just the primary tool options, *not* the separately saved presets
	for each tool.

	* app/gui/gui.c (gui_exit_callback): changed accordingly.

	* app/dialogs/preferences-dialog.c: added GUI for the stuff above
	in the style of the devicerc and seccionrc prefs GUIs.

2005-04-11  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/base64.h
	* plug-ins/metadata/base64.c: Added implementation of
	base64_decode(), use gsize or gssize for sizes.

2005-04-11  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/metadata.c: Register plug_in_metadata_import
	and plug_in_metadata_export in the PDB.

	* plug-ins/metadata/Makefile.am
	* plug-ins/metadata/base64.h
	* plug-ins/metadata/base64.c: Added base64 decoder, needed for
	reading the thumbnail images (base64 encoded inside XML element).
	
	* plug-ins/metadata/xmp-parse.h
	* plug-ins/metadata/xmp-parse.c: Added XMP_PTYPE_ALT_THUMBS for
	parsing a list of thumbnail images.  Decode and store the base64
	encoded images.

	* plug-ins/metadata/xmpdump.c
	* plug-ins/metadata/xmp-model.h
	* plug-ins/metadata/xmp-model.c: Added support for thumbnails,
	defined global symbols for standard XMP schema URIs.

	* plug-ins/metadata/interface.c: Preliminary support for widget
	cross-references just for testing - it does not save anything yet.
	Added thumbnail tab, although the thumbnail image is not displayed
	yet.

2005-04-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpclipboard.c: don't include "core/gimpviewable.h"
